<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="startstop" />
    <item type="id" name="title" />
    <item type="id" name="description"/>
    <item type="id" name="location"/>
    <item type="id" name="day_name"/>
    <item type="id" name="day_of_the_month_text"/>
    <item type="id" name="day_name_text"/>
    <item type="id" name="add_event_title"/>
    <item type="id" name="add_event_description"/>
    <item type="id" name="add_event_location"/>
    <item type="id" name="add_new_appointment"/>

    <item type="id" name="from_date"/>
    <item type="id" name="from_time"/>
    <item type="id" name="set_from_date"/>
    <item type="id" name="set_from_time"/>

    <item type="id" name="to_date"/>
    <item type="id" name="to_time"/>
    <item type="id" name="set_to_date"/>
    <item type="id" name="set_to_time"/>

    <item type="id" name="calendar_recycler_view"/>
    <item type="id" name="appointment_recycler_view"/>
</resources>
