<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="snijsure.com.sunrisedemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/prevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:onClick="onPrevMonth"
                android:text="@string/action_prev"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/monthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="onNextMonth"
                android:text="@string/action_next"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"></FrameLayout>


    <View style="@style/Divider.Horizontal" />

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <android.support.design.widget.FloatingActionButton
            android:id="@id/add_new_appointment"
            style="@style/FloatingActionButton"
            android:layout_gravity="bottom|end"/>
    </FrameLayout>


</LinearLayout>


